manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mldeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: mldeployment
  template:
    metadata:
      labels:
        name: mldeployment
    spec:
      containers:
        - name: mlcontainer
          image: quadribello/ml_app:latest
          ports:
          - name: streamlit
            containerPort: 8501
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          volumeMounts:
            - name:  persistent-storage
              mountPath:  /data
      volumes:
        - name:  persistent-storage
          PersistentVolumeClaim:
            claimName: efs-claim
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - private-node
